Added beta-testing routes and fixed some files
